Bug 1280056 - coverity: mailnews/mime/emitters/nsMimeBaseEmitter.cpp: |l10nTagName| is not freed always. r=benc

CID 450614 (#1 of 1): Resource leak (RESOURCE_LEAK)
20. leaked_storage: Variable l10nTagName going out of scope leaks the storage it points to.